{
    "name": "UIActionsProfiler",
    "maps": [
        {
            "name": "UIActions",
            "id": "3ef7450c-19f2-4745-99a0-51f86a9e173e",
            "actions": [
                {
                    "name": "StartGame",
                    "type": "Button",
                    "id": "66570f26-8390-4f15-9a18-b9ee1f57863e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayCinematic",
                    "type": "Button",
                    "id": "ecd5128b-136f-4ad2-8a57-0df31fe99eb9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cc31c827-2db6-413b-bb0c-7f86ea19321b",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StartGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "83a0e31b-449e-41b8-ae4e-57c754fec5b1",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StartGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e83e7531-5374-4e49-af7f-85b7aa99790f",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayCinematic",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "255d850b-962e-4860-a6df-f070e0ed22a9",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayCinematic",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}